@@ -1,4 +1,6 @@
+DIST patchbundle-selinux-base-policy-2.20110726-r3.tar.bz2 21840 RMD160 62790db6976b761dce2c871dd42de41cdc84d4fb SHA1 71978a28e39d64f39fc20efd21a1fd105d463102 SHA256 1dfe1c558574aba3ee959e75a20235c5ef95d338b833b17ad7a2202980c9f93a
 DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
+EBUILD selinux-asterisk-2.20110726-r1.ebuild 271 RMD160 888da495fc83460fe4312afc59a3df2b32984e5c SHA1 ad02c1062d6e01af63c0bff6e6dd10802810e629 SHA256 fa6cbcd682c536ccec17c4991b9197b0aeb89a859dea5593f5ab3af9c8c136f5
 EBUILD selinux-asterisk-2.20110726.ebuild 247 RMD160 fcc64770dbfba575d1e9e4d09b28afca230a8fbd SHA1 69d11d6067035285806b5ee54796976d6dcc66f1 SHA256 6c9d5272e090a3d0a567c2435ae4e038e00cbc0860b9a987c7a8195d0e5c4033
-MISC ChangeLog 3170 RMD160 dc5341712be6e1488980523ef83bd9ddeba3f9ed SHA1 cd65135199632a1561e66f1e64f0715627e976ec SHA256 eaee8de10c7864a33758649411764decbfe2f12d5f9019990a70bbcd600619bb
+MISC ChangeLog 3334 RMD160 a5000e544730882b658b56d78980051ad18e6573 SHA1 d9bc4edd1d302ce47d71bbe1581d97cf6c8158ab SHA256 ed03aaf472f8a8db3b5c61c20b3eb415b988dd8f1621104a8b3666fa712f3d2f
 MISC metadata.xml 232 RMD160 c6a98a42ae2a8c64e895ec79addf81579b4c26e9 SHA1 72e0c18ad69f004fbbcff9c6bc49b4ca9dcf580b SHA256 60a4674a833cc1838b39bbaf65acf044874e1eed9e6f6a712d5f1b3fd8d6fe59
