@@ -2,8 +2,10 @@ AUX config 631 RMD160 076ae6441a3a29ead502c8bc4b646546095ad95a SHA1 022e0457876c
 AUX modules.conf 728 RMD160 20c291e9a1ab63c7ffeda41f1b28a1a3d1058a5b SHA1 79f164d12565c3f9cc633fbbfc3469f1337cabc9 SHA256 7deba8527d6002e25d5b307fa085341473add1bc6489902a920096012ba56456
 DIST patchbundle-selinux-base-policy-2.20110726-r1.tar.bz2 18052 RMD160 cff13706b370498cf7193d968b3bff47a718ed84 SHA1 68dbdf8366068f80b85333ecc8bbc578567218c5 SHA256 ebfb12f861447c8865e28ff5ee06ff0d89f870db3b9745c2b18558772a783023
 DIST patchbundle-selinux-base-policy-2.20110726-r2.tar.bz2 21215 RMD160 4ac6ff2ad85e7c23792bbd817c2593aa314cfa44 SHA1 5587a7765b9d1681fe4577153a919c508d56d1c1 SHA256 cd8eb050a9ecd6376c73ce02980ec38c387309b5abfbdcb681ebcaf52c9765e2
+DIST patchbundle-selinux-base-policy-2.20110726-r3.tar.bz2 21840 RMD160 62790db6976b761dce2c871dd42de41cdc84d4fb SHA1 71978a28e39d64f39fc20efd21a1fd105d463102 SHA256 1dfe1c558574aba3ee959e75a20235c5ef95d338b833b17ad7a2202980c9f93a
 DIST refpolicy-2.20110726.tar.bz2 588033 RMD160 9803effffe1dbb28d52bee03432e052f4fdc8d3f SHA1 cc27b06c3f541d8f2c57c52804ab6893afcd9db2 SHA256 8159b7535aa0f805510e4e3504b1317d7083b227f0ef3df51c6f002ed70ecedb
 EBUILD selinux-base-policy-2.20110726-r1.ebuild 4617 RMD160 455fd80b44272c9618ec9344309be937cb6a736b SHA1 50a1132055a459c60608ff1b4ccea2c3a6e632bd SHA256 f2a85dae67498809340e7190670a5ba6f03488b2d963b80c0da48ba9409fdf84
 EBUILD selinux-base-policy-2.20110726-r2.ebuild 4714 RMD160 0744fca82ad749211c52b9b37e46b9cfee100692 SHA1 74d1decadc12b2780afd53535014595dafcecd6b SHA256 b43543f7f88b4b3763bf23018f8338c89dbac13683b452dfbb049f83dbda243e
-MISC ChangeLog 20373 RMD160 23e5e74c50b02abfee8d4aa6df11c57d1b668f8c SHA1 8b38dceb0a022e7849efd350ee95ed41bb53ed57 SHA256 6c9e7984d1034b3fbb9ed47b9fd194c14cc06f103c8eaf34e4da5e2cc6cb7268
+EBUILD selinux-base-policy-2.20110726-r3.ebuild 4809 RMD160 385f9e9ad2331164d7fb40275b1296e52b995cad SHA1 58f19e4ffd0302c4f25f7b7402b5172351df6ad3 SHA256 f1940690dcfbc7ac74f19c2ba7f89f10d33e61aef1315dae274e62476c0783a0
+MISC ChangeLog 20603 RMD160 9b2b4965c8a07204d47b787519a92ecf5bbde03f SHA1 2b5d05ec9018431e25655b80904d65085a442ac0 SHA256 e7d45f3f853349d08b7495a6ec59ee5f493ad5299ab7e1119dcc366aa9471b53
 MISC metadata.xml 671 RMD160 49dd94bb827c4ab2bb8043739ef7564df4cf1c07 SHA1 a92b8a5ef129707a44fe2ae1913060d02badd566 SHA256 c32ccc54ca7df400974a19ad14c093ea7b777f7a40467bdb672f441314122e55
