@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-base-policy/ChangeLog,v 1.80 2011/07/11 01:59:36 blueness Exp $
 
+*selinux-base-policy-2.20110726-r3 (28 Aug 2011)
+
+  28 Aug 2011; <swift@gentoo.org> +selinux-base-policy-2.20110726-r3.ebuild:
+  Introduce xdg files, update on puppet privileges, fix asterisk issues, some
+  dontaudit updates too
+
 *selinux-base-policy-2.20110726-r2 (19 Aug 2011)
 
   19 Aug 2011; <swift@gentoo.org> +selinux-base-policy-2.20110726-r2.ebuild:
