@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sec-policy/selinux-asterisk/ChangeLog,v 1.19 2011/06/04 16:05:44 blueness Exp $
 
+*selinux-asterisk-2.20110726-r1 (28 Aug 2011)
+
+  28 Aug 2011; <swift@gentoo.org> +selinux-asterisk-2.20110726-r1.ebuild:
+  Update asterisk policy, fix bug #379323
+
   04 Jun 2011; Anthony G. Basile <blueness@gentoo.org>
   -selinux-asterisk-2.20090730.ebuild, -selinux-asterisk-2.20091215.ebuild,
   -selinux-asterisk-20080525.ebuild:
